Finshing skeleton report module

--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
 	<!-- endbuild -->
 
 
-	<!-- build:js moduleDashboard/dashboard.js -->
-	<script lang="javascript" src="moduleCumulative/dashboard.js"></script>
+	<!-- build:js report/report.js -->
+	<script lang="javascript" src="report/report.js"></script>
 	<!-- endbuild -->
 
 
@@ -129,9 +129,9 @@
 </head>
 
 <body>
-<div class="mainView" ng-controller="NavigationController as navCtrl">
+<div class="mainView">
 	<d2-header-bar></d2-header-bar>
 	<div ng-view style="margin-top: 48px"></div>
-</div> <!-- /container -->	
+</div>
 </body>
 </html>
