--- a/src/report/report.html
+++ b/src/report/report.html
@@ -7,38 +7,86 @@
 
 	<div class="navItem">
 		<h4>Report type</h4>
-		<d2-select options="rCtrl.reportTypes" ng-model="rCtrl.selectedReport"></d2-select>
+		<d2-select options="rCtrl.reportTypes" ng-model="rCtrl.selectedReport" placeholder="Select report type..."></d2-select>
+		<d2-select ng-if="rCtrl.selectedReport.id === 'vac'" options="rCtrl.vaccineReportTypes" ng-model="rCtrl.selectedVaccineReport"></d2-select>
 	</div>
+
 
 	<hr/>
 
 	<div class="navItem">
 		<h4>Data</h4>
-		<d2-select placeholder="Select vaccines..."></d2-select>
+		<d2-select
+				options="rCtrl.vaccines"
+				ng-model="rCtrl.selectedVaccines"
+				placeholder="Select vaccines..."
+				multiple="rCtrl.selectedVaccineReport.id === 'allVac'">
+		</d2-select>
+		<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.dataType='num';">
+			<label class="btn btn-success" ng-model="rCtrl.dataType" uib-btn-radio="'num'" uncheckable>Vaccines</label>
+			<label class="btn btn-success" ng-model="rCtrl.dataType" uib-btn-radio="'cov'" uncheckable>Coverage</label>
+		</div>
+		<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.dataGroup='all';" ng-if="rCtrl.dataType==='num';">
+			<label class="btn btn-success" ng-model="rCtrl.dataGroup" uib-btn-radio="'all'" uncheckable>All ages</label>
+			<label class="btn btn-success" ng-model="rCtrl.dataGroup" uib-btn-radio="'target'" uncheckable>Target age</label>
+		</div>
 	</div>
 
 	<hr/>
 
 	<div class="navItem">
 		<h4>Period</h4>
+		<d2-select options="rCtrl.periods" ng-model="rCtrl.selectedPeriod" placeholder="Select year..."></d2-select>
 		<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.aggregationType='cumulative';">
 			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'cumulative'" uncheckable>Cumulative</label>
 			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'monthly'" uncheckable>Monthly</label>
 		</div>
-		<d2-select placeholder="Select year..."></d2-select>
 	</div>
 
 	<hr/>
 
 	<div class="navItem">
 		<h4>Organisation unit</h4>
-		<d2-select-orgunit ng-model="rCtrl.selectedOrgunit" hide-group="true"></d2-select-orgunit>
+		<d2-select-orgunit ng-model="rCtrl.selectedOrgunit" hide-group="true" hide-level="rCtrl.selectedVaccineReport.id === 'allVac'"></d2-select-orgunit>
+	</div>
+
+	<div class="navItem" style="float:right;">
+		<button ng-click="rCtrl.makeReport()" class="btn btn-success">Make report</button>
+
 	</div>
 
 </div>
 
 
-<div id="content" class="reportContent">
-	Report goes here...
+<div id="content" class="reportContent" style="margin: 10px 10px 10px 10px;">
+	<h3>{{rCtrl.current.title}}</h3>
+	<h4>{{rCtrl.current.subtitle}}</h4>
+
+	<table id="dataTable"
+		   class="table table-striped table-bordered dataTable no-footer"
+		   style="margin-top: 20px;"
+		   st-table="rCtrl.current.dataTable"
+		   st-safe-src="rCtrl.current.data"
+		   ng-if="rCtrl.current.data">
+		<thead>
+		<tr>
+			<th ng-repeat="header in rCtrl.current.dataHeader"
+				id="{{header.id}}"
+				st-sort="{{header.id}}"
+				ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
+				{{header.title}}
+			</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr ng-repeat="row in rCtrl.current.dataTable track by $index">
+			<td ng-repeat="header in rCtrl.current.dataHeader"
+				ng-class="header.id.startsWith('20') ? 'numeric' : ''"
+				ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
+				{{row[header.id]}}<span ng-if="rCtrl.current.dataType === 'cov' && header.id.startsWith('20') && row[header.id]">%</span>
+			</td>
+		</tr>
+		</tbody>
+	</table>
 </div>
 
