--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,11 @@
 	<script src="../bower_components/file-saver/FileSaver.js"></script>
 	<script src="../bower_components/angular-bootstrap-nav-tree/dist/abn_tree_directive.js"></script>
 	<script src="../bower_components/angular-smart-table/dist/smart-table.js"></script>
+
+	<script src="../bower_components/highcharts/js/highcharts.src.js"></script>
+	<script src="../bower_components/highcharts/js/modules/exporting.js"></script>
+	<script src="../bower_components/highcharts/js/themes/gray.js"></script>
+
 	<!-- endbuild -->
 
 	<!-- build:js core/app.js -->
@@ -63,6 +68,7 @@
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
 	<link rel="stylesheet" href="../bower_components/angular-ui-select/dist/select.css">
 	<link rel="stylesheet" href="../bower_components/angular-bootstrap-nav-tree/dist/abn_tree.css">
+	<link rel="stylesheet" href="../bower_components/highcharts/css/highcharts.css">
 
 	<!-- endbuild -->
 
