--- a/src/report/report.html
+++ b/src/report/report.html
@@ -62,146 +62,148 @@
 
 </div>
 
+<div style="margin: 10px 10px 10px 10px;">
 
-<div id="content" ng-if="rCtrl.current.type === 'vac'" class="reportContent" style="margin: 10px 10px 10px 10px;">
-	<h3>{{rCtrl.current.title}}</h3>
-	<h4>{{rCtrl.current.subtitle}}</h4>
+	<div id="content" ng-if="rCtrl.current.type === 'vac'" class="reportContent">
+		<h3>{{rCtrl.current.title}}</h3>
+		<h4>{{rCtrl.current.subtitle}}</h4>
 
-	<table id="dataTable"
-		   class="table table-striped table-bordered dataTable no-footer"
-		   style="margin-top: 20px;"
-		   st-table="rCtrl.current.dataTable"
-		   st-safe-src="rCtrl.current.data"
-		   ng-if="rCtrl.current.data">
-		<thead>
-		<tr>
-			<th ng-repeat="header in rCtrl.current.dataHeader"
-				id="{{header.id}}"
-				st-sort="{{header.id}}"
-				ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
-				{{header.title}}
-			</th>
-		</tr>
-		</thead>
-		<tbody>
-		<tr ng-repeat="row in rCtrl.current.dataTable track by $index">
-			<td ng-repeat="header in rCtrl.current.dataHeader"
-				ng-class="header.id.startsWith('20') ? 'numeric' : ''"
-				ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
-				{{row[header.id]}}<span ng-if="rCtrl.current.dataType === 'cov' && header.id.startsWith('20') && row[header.id]">%</span>
-			</td>
-		</tr>
-		</tbody>
-	</table>
-</div>
-
-
-<div id="content" ng-if="rCtrl.current.type === 'perf'"  class="reportContent" style="margin: 10px 10px 10px 10px;">
-	<h3>{{rCtrl.current.title}}</h3>
-	<h4>{{rCtrl.current.subtitle}}</h4>
-
-	<table id="performanceLegend" class="table table-bordered no-footer">
-		<tr>
-			<td class="success">
-				<table>
-					<tr>
-						<th rowspan=2 style="padding-right: 10px">
-							Category A</th>
-						<td>Coverage >= 90%</td>
-					</tr>
-					<tr>
-						<td>Dropout rate <= 10%</td>
-					</tr>
-				</table>
-			</td>
-			<td class="info">
-				<table>
-					<tr>
-						<th rowspan=2 style="padding-right: 10px">
-							Category B</th>
-						<td>Coverage >= 90%</td>
-					</tr>
-					<tr>
-						<td>Dropout rate > 10%</td>
-					</tr>
-				</table>
-			</td>
-			<td class="warning">
-				<table>
-					<tr>
-						<th rowspan=2 style="padding-right: 10px">
-							Category C</th>
-						<td>Coverage < 90%</td>
-					</tr>
-					<tr>
-						<td>Dropout rate < 10%</td>
-					</tr>
-				</table>
-			</td>
-			<td class="danger">
-				<table>
-					<tr>
-						<th rowspan=2 style="padding-right: 10px">
-							Category D</th>
-						<td>Coverage < 90%</td>
-					</tr>
-					<tr>
-						<td>Dropout rate >= 10%</td>
-					</tr>
-				</table>
-			</td>
-		</tr>
-	</table>
-
-	<table id="dataTable"
-		   class="table table-striped table-bordered dataTable no-footer"
-		   style="margin-top: 20px;"
-		   st-table="rCtrl.current.dataTable"
-		   st-safe-src="rCtrl.current.data"
-		   ng-if="rCtrl.current.data">
-		<thead>
-		<tr>
-			<th ng-repeat="header in rCtrl.current.dataHeader"
-				id="{{header.id}}"
-				st-sort="{{header.id}}">
-				{{header.title}}
-			</th>
-			<th ng-repeat="header in rCtrl.current.dataHeaderData"
-				id="{{header.id}}"
-				st-sort="{{header.id}}">
-				{{header.title}}
-			</th>
-		</tr>
-		</thead>
-		<tbody>
-		<tr></tr>
-		<tr ng-repeat="row in rCtrl.current.dataTable track by $index">
-			<td ng-repeat="header in rCtrl.current.dataHeader">
-				{{row[header.id]}}
-			</td>
-			<td ng-repeat="header in rCtrl.current.dataHeaderData"
-				ng-class="{success:row[header.id].category === 'A',
-				info:row[header.id].category === 'B',
-				warning:row[header.id].category === 'C',
-				danger:row[header.id].category === 'D'}">
-				<table ng-if="row[header.id].category">
-					<tr>
-						<th rowspan=2 style="padding-right: 5px">
-							{{row[header.id].category}}</th>
-						<td>{{row[header.id].coverage}}%</td>
-					</tr>
-					<tr>
-						<td>{{row[header.id].dropout}}%</td>
-					</tr>
-				</table>
-
-			</td>
-		</tr>
-		</tbody>
-	</table>
-</div>
+		<table id="dataTable"
+			   class="table table-striped table-bordered dataTable no-footer"
+			   style="margin-top: 20px;"
+			   st-table="rCtrl.current.dataTable"
+			   st-safe-src="rCtrl.current.data"
+			   ng-if="rCtrl.current.data">
+			<thead>
+			<tr>
+				<th ng-repeat="header in rCtrl.current.dataHeader"
+					id="{{header.id}}"
+					st-sort="{{header.id}}"
+					ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
+					{{header.title}}
+				</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr ng-repeat="row in rCtrl.current.dataTable track by $index">
+				<td ng-repeat="header in rCtrl.current.dataHeader"
+					ng-class="header.id.startsWith('20') ? 'numeric' : ''"
+					ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
+					{{row[header.id]}}<span ng-if="rCtrl.current.dataType === 'cov' && header.id.startsWith('20') && row[header.id]">%</span>
+				</td>
+			</tr>
+			</tbody>
+		</table>
+	</div>
 
 
-<div id="chart">
+	<div id="content" ng-if="rCtrl.current.type === 'perf'"  class="reportContent">
+		<h3>{{rCtrl.current.title}}</h3>
+		<h4>{{rCtrl.current.subtitle}}</h4>
 
+		<table id="performanceLegend" class="table table-bordered no-footer">
+			<tr>
+				<td class="success">
+					<table>
+						<tr>
+							<th rowspan=2 style="padding-right: 10px">
+								Category A</th>
+							<td>Coverage >= 90%</td>
+						</tr>
+						<tr>
+							<td>Dropout rate <= 10%</td>
+						</tr>
+					</table>
+				</td>
+				<td class="info">
+					<table>
+						<tr>
+							<th rowspan=2 style="padding-right: 10px">
+								Category B</th>
+							<td>Coverage >= 90%</td>
+						</tr>
+						<tr>
+							<td>Dropout rate > 10%</td>
+						</tr>
+					</table>
+				</td>
+				<td class="warning">
+					<table>
+						<tr>
+							<th rowspan=2 style="padding-right: 10px">
+								Category C</th>
+							<td>Coverage < 90%</td>
+						</tr>
+						<tr>
+							<td>Dropout rate < 10%</td>
+						</tr>
+					</table>
+				</td>
+				<td class="danger">
+					<table>
+						<tr>
+							<th rowspan=2 style="padding-right: 10px">
+								Category D</th>
+							<td>Coverage < 90%</td>
+						</tr>
+						<tr>
+							<td>Dropout rate >= 10%</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+
+		<table id="dataTable"
+			   class="table table-striped table-bordered dataTable no-footer"
+			   style="margin-top: 20px;"
+			   st-table="rCtrl.current.dataTable"
+			   st-safe-src="rCtrl.current.data"
+			   ng-if="rCtrl.current.data">
+			<thead>
+			<tr>
+				<th ng-repeat="header in rCtrl.current.dataHeader"
+					id="{{header.id}}"
+					st-sort="{{header.id}}">
+					{{header.title}}
+				</th>
+				<th ng-repeat="header in rCtrl.current.dataHeaderData"
+					id="{{header.id}}"
+					st-sort="{{header.id}}">
+					{{header.title}}
+				</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr></tr>
+			<tr ng-repeat="row in rCtrl.current.dataTable track by $index">
+				<td ng-repeat="header in rCtrl.current.dataHeader">
+					{{row[header.id]}}
+				</td>
+				<td ng-repeat="header in rCtrl.current.dataHeaderData"
+					ng-class="{success:row[header.id].category === 'A',
+					info:row[header.id].category === 'B',
+					warning:row[header.id].category === 'C',
+					danger:row[header.id].category === 'D'}">
+					<table ng-if="row[header.id].category">
+						<tr>
+							<th rowspan=2 style="padding-right: 5px">
+								{{row[header.id].category}}</th>
+							<td>{{row[header.id].coverage}}%</td>
+						</tr>
+						<tr>
+							<td>{{row[header.id].dropout}}%</td>
+						</tr>
+					</table>
+
+				</td>
+			</tr>
+			</tbody>
+		</table>
+	</div>
+
+
+	<div id="chart" style="height: 600px">
+
+	</div>
 </div>
