--- a/src/report/report.html
+++ b/src/report/report.html
@@ -33,18 +33,6 @@
 				(rCtrl.selectedReport.id === 'mon' && rCtrl.selectedMonitoringReport.id === 'allVac')">
 		</d2-select>
 
-		<!--FOR VACCINES-->
-		<div ng-if="rCtrl.selectedReport.id === 'vac'">
-			<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.dataType='num';">
-				<label class="btn btn-success" ng-model="rCtrl.dataType" uib-btn-radio="'num'" uncheckable>Vaccines</label>
-				<label class="btn btn-success" ng-model="rCtrl.dataType" uib-btn-radio="'cov'" uncheckable>Coverage</label>
-			</div>
-			<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.dataGroup='all';" ng-if="rCtrl.dataType==='num';">
-				<label class="btn btn-success" ng-model="rCtrl.dataGroup" uib-btn-radio="'all'" uncheckable>All ages</label>
-				<label class="btn btn-success" ng-model="rCtrl.dataGroup" uib-btn-radio="'target'" uncheckable>Target age</label>
-			</div>
-		</div>
-
 		<!--FOR MONITORING-->
 		<d2-select
 				ng-if="rCtrl.selectedReport.id === 'mon' && rCtrl.selectedMonitoringReport.id === 'allVac'"
@@ -57,12 +45,12 @@
 	<hr/>
 
 	<div class="navItem">
-		<h4>Period</h4>
+		<h4>Year</h4>
 		<d2-select options="rCtrl.periods" ng-model="rCtrl.selectedPeriod" placeholder="Select year..."></d2-select>
 		<div class="btn-group btn-group-justified"
 			 style="margin-bottom: 5px;"
 			 ng-init="rCtrl.aggregationType='cumulative';"
-			 ng-if="rCtrl.selectedReport.id != 'mon'">
+			 ng-if="rCtrl.selectedReport.id === 'vac'">
 			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'cumulative'" uncheckable>Cumulative</label>
 			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'monthly'" uncheckable>Monthly</label>
 		</div>
@@ -271,7 +259,7 @@
 	<h3>{{rCtrl.current.title}}</h3>
 	<h4>{{rCtrl.current.subtitle}}</h4>
 
-
+	<!--VACCINATIONS-->
 	<div ng-if="rCtrl.current.type === 'vac'" class="reportContent">
 		<table id="vaccineDataTable"
 			   class="table table-striped table-bordered dataTable no-footer table-condensed"
@@ -281,27 +269,54 @@
 			   ng-if="rCtrl.current.data">
 			<thead>
 			<tr>
-				<th ng-repeat="header in rCtrl.current.dataHeader"
+				<th ng-repeat="header in rCtrl.current.headerColumns"
 					id="{{header.id}}"
 					st-sort="{{header.id}}"
-					ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
+					ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')"
+					rowspan="3">
+					{{header.title}}
+				</th>
+				<th>Data</th>
+				<th ng-repeat="header in rCtrl.current.dataColumns">
 					{{header.title}}
 				</th>
 			</tr>
 			</thead>
-			<tbody>
-			<tr ng-repeat="row in rCtrl.current.dataTable track by $index">
-				<td ng-repeat="header in rCtrl.current.dataHeader"
-					ng-class="header.id.startsWith('20') ? 'numeric' : ''"
-					ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')">
-					{{row[header.id]}}<span ng-if="rCtrl.current.dataType === 'cov' && header.id.startsWith('20') && row[header.id]">%</span>
-				</td>
-			</tr>
-			</tbody>
+			<tbody ng-repeat="row in rCtrl.current.dataTable track by $index">
+				<tr>
+					<!--Header-->
+					<td ng-repeat="header in rCtrl.current.headerColumns"
+						ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')"
+						rowspan="3">
+						{{row[header.id]}}
+					</td>
+
+					<!--Data-->
+					<td>All ages</td>
+					<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
+						{{row[header.id].vaccineAll | number : 0}}
+					</td>
+				</tr>
+				<tr>
+					<!--Data-->
+					<td>Target age group</td>
+					<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
+						{{row[header.id].vaccineTarget | number : 0}}
+					</td>
+				</tr>
+				<tr>
+					<!--Data-->
+					<td>Coverage</td>
+					<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
+						{{row[header.id].coverage}}%
+					</td>
+				</tr>
+			</tbody ng-repeat="row in rCtrl.current.dataTable track by $index">
 		</table>
 	</div>
 
 
+	<!--PERFORMANCE-->
 	<div ng-if="rCtrl.current.type === 'perf'"  class="reportContent">
 
 		<div id="performanceChart" style="height: 600px; margin-bottom: 20px"></div>
@@ -332,18 +347,18 @@
 					{{row[header.id]}}
 				</td>
 				<td ng-repeat="header in rCtrl.current.dataHeaderData"
-					ng-class="{success:row[header.id].category === 'A',
-					info:row[header.id].category === 'B',
-					warning:row[header.id].category === 'C',
-					danger:row[header.id].category === 'D'}">
+					ng-class="{success:row[header.id].category === 'A' && row[header.id].coverage <= 100,
+					info:row[header.id].category === 'B' && row[header.id].coverage <= 100,
+					warning:row[header.id].category === 'C' && row[header.id].dropout >= 0,
+					danger:row[header.id].category === 'D' && row[header.id].dropout >= 0}">
 					<table ng-if="row[header.id].category">
 						<tr>
 							<th rowspan=2 style="padding-right: 5px">
 								{{row[header.id].category}}</th>
-							<td>{{row[header.id].coverage}}%</td>
+							<td ng-class="{redText:row[header.id].coverage > 100}">{{row[header.id].coverage}}%</td>
 						</tr>
 						<tr>
-							<td>{{row[header.id].dropout}}%</td>
+							<td ng-class="{redText:row[header.id].dropout < 0}">{{row[header.id].dropout}}%</td>
 						</tr>
 					</table>
 
@@ -408,6 +423,7 @@
 	</div>
 
 
+	<!--MONITORING-->
 	<div ng-if="rCtrl.current.type === 'mon'" class="reportContent">
 		<div id="monitoringChart" style="height: 600px; margin-bottom: 20px"></div>
 	</div>
