--- a/src/report/report.html
+++ b/src/report/report.html
@@ -6,528 +6,29 @@
 	<span class="glyphicon glyphicon-cog"></span>
 </a>
 
-<div id="leftNav" class="leftNav">
+<div ng-include="'report/leftNav.html'"></div>
 
-	<a class="navIcon" style="right: 15px;" ng-click="rCtrl.hideLeftMenu();">
-		<span class="glyphicon glyphicon-chevron-left"></span>
-	</a>
-
-	<div class="navItem">
-		<h4>Report type</h4>
-		<d2-select on-select="rCtrl.selectedVaccines = undefined;" options="rCtrl.reportTypes" ng-model="rCtrl.selectedReport" placeholder="Select report type..."></d2-select>
-		<d2-select on-select="rCtrl.selectedVaccines = undefined;" ng-if="rCtrl.selectedReport.id === 'vac'" options="rCtrl.vaccineReportTypes" ng-model="rCtrl.selectedVaccineReport"></d2-select>
-		<d2-select on-select="rCtrl.selectedVaccines = undefined;" ng-if="rCtrl.selectedReport.id === 'mon'" options="rCtrl.monitoringReportTypes" ng-model="rCtrl.selectedMonitoringReport"></d2-select>
-	</div>
-
-
-	<hr ng-if="rCtrl.selectedReport.id != 'perf' && rCtrl.selectedReport.id != 'rim'"/>
-
-	<div class="navItem" ng-if="rCtrl.selectedReport.id != 'perf' && rCtrl.selectedReport.id != 'rim'">
-		<h4>Data</h4>
-		<d2-select
-				options="rCtrl.vaccines"
-				ng-model="rCtrl.selectedVaccines"
-				placeholder="Select vaccines..."
-				on-select="rCtrl.monitoringTargetOptions(); rCtrl.selectedTarget = undefined;"
-				multiple="(rCtrl.selectedReport.id === 'vac' && rCtrl.selectedVaccineReport.id === 'allVac') ||
-				(rCtrl.selectedReport.id === 'mon' && rCtrl.selectedMonitoringReport.id === 'allVac')">
-		</d2-select>
-
-		<!--FOR MONITORING-->
-		<d2-select
-				ng-if="rCtrl.selectedReport.id === 'mon' && rCtrl.selectedMonitoringReport.id === 'allVac'"
-				options="rCtrl.targets"
-				ng-model="rCtrl.selectedTarget"
-				placeholder="Select target...">
-		</d2-select>
-	</div>
-
-	<hr/>
-
-	<div class="navItem">
-		<h4>Period</h4>
-		<d2-select options="rCtrl.periods" ng-model="rCtrl.selectedPeriod" placeholder="Select year..."></d2-select>
-		<div class="btn-group btn-group-justified"
-			 style="margin-bottom: 5px;"
-			 ng-init="rCtrl.aggregationType='cumulative';"
-			 ng-if="rCtrl.selectedReport.id === 'vac'">
-			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'cumulative'" uncheckable>Cumulative</label>
-			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'monthly'" uncheckable>Monthly</label>
-		</div>
-		<div ng-if="rCtrl.selectedReport.id === 'mon' && rCtrl.selectedMonitoringReport.id != 'allVac'">
-			<label>Previous years for comparison</label>
-			<input ng-init="rCtrl.selectedReferencePeriods = 3"
-				   ng-model="rCtrl.selectedReferencePeriods"
-				   type="number"
-				   min="1"
-				   step="1"
-				   class="form-control">
-		</div>
-		<div ng-if="rCtrl.selectedReport.id === 'rim'">
-			<label>Month</label>
-			<d2-select ng-model="rCtrl.selectedMonth" options="rCtrl.months" placeholder="Select month..."></d2-select>
-		</div>
-	</div>
-
-	<hr/>
-
-	<div class="navItem" ng-if="rCtrl.selectedReport.id != 'rim'">
-		<h4>Organisation unit</h4>
-		<d2-select-orgunit ng-model="rCtrl.selectedOrgunit"
-						   default-level="1"
-						   hide-group="true"
-						   hide-level="(rCtrl.selectedReport.id === 'vac' && rCtrl.selectedVaccineReport.id === 'allVac')
-						   || rCtrl.selectedReport.id === 'mon'">
-		</d2-select-orgunit>
-	</div>
-
-	<div class="navItem" style="float:right;">
-		<button ng-disabled="!rCtrl.isReady()" ng-click="rCtrl.makeReport()" class="btn btn-success">Make report</button>
-
-	</div>
-
-</div>
-
-
-<div id="rightNav" class="rightNav">
-
-	<a class="navIcon" style="left: 5px;" ng-click="rCtrl.hideRightMenu();">
-		<span class="glyphicon glyphicon-chevron-right"></span>
-	</a>
-
-	<uib-tabset style="margin: 30px 10px 10px 10px" active="activeForm" ng-if="rCtrl.ready && rCtrl.admin">
-		<uib-tab index="0" heading="Vaccines">
-
-			<div ng-if="rCtrl.adm.i" style="margin: 10px">
-				<table class="table table-bordered" style="width: 600px;">
-					<tr>
-						<th>Code</th>
-						<td>{{rCtrl.adm.i.code}}</td>
-					</tr><tr>
-						<th>Name</th>
-						<td><input class="form-control" ng-model="rCtrl.adm.i.displayName"></td>
-					</tr><tr>
-						<th>Vaccine (total)</th>
-						<td>
-							<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.adm.i.typeA='de';">
-								<label class="btn btn-success" ng-model="rCtrl.adm.i.typeA" uib-btn-radio="'de'" uncheckable>Data element</label>
-								<label class="btn btn-success" ng-model="rCtrl.adm.i.typeA" uib-btn-radio="'in'" uncheckable>Indicator</label>
-							</div>
-							<d2-select-data-element ng-if="rCtrl.adm.i.typeA === 'de'" ng-model="rCtrl.adm.i.vaccineAll"></d2-select-data-element>
-							<d2-select-indicator ng-if="rCtrl.adm.i.typeA === 'in'" ng-model="rCtrl.adm.i.vaccineAll"></d2-select-indicator>
-						</td>
-					</tr><tr>
-						<th>Vaccine (target age)</th>
-					<td>
-						<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.adm.i.typeT='de';">
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeT" uib-btn-radio="'de'" uncheckable>Data element</label>
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeT" uib-btn-radio="'in'" uncheckable>Indicator</label>
-						</div>
-						<d2-select-data-element ng-if="rCtrl.adm.i.typeT === 'de'" ng-model="rCtrl.adm.i.vaccineTarget"></d2-select-data-element>
-						<d2-select-indicator ng-if="rCtrl.adm.i.typeT === 'in'" ng-model="rCtrl.adm.i.vaccineTarget"></d2-select-indicator>
-					</td>
-					</tr><tr>
-						<th>Denominator</th>
-					<td>
-						<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.adm.i.typeD='de';">
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeD" uib-btn-radio="'de'" uncheckable>Data element</label>
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeD" uib-btn-radio="'in'" uncheckable>Indicator</label>
-						</div>
-						<d2-select-data-element ng-if="rCtrl.adm.i.typeD === 'de'" ng-model="rCtrl.adm.i.denominator"></d2-select-data-element>
-						<d2-select-indicator ng-if="rCtrl.adm.i.typeD === 'in'" ng-model="rCtrl.adm.i.denominator"></d2-select-indicator>
-					</td>
-					</tr>
-
-				</table>
-				<button class="btn btn-danger" ng-click="rCtrl.adm.i = null">Cancel</button>
-				<button class="btn btn-success" ng-click="rCtrl.adm.indicatorSave(rCtrl.adm.i)">Save</button>
-			</div>
-
-			<table class="table table-bordered" ng-if="!rCtrl.adm.i" style="margin: 10px">
-				<tr>
-					<th>Code</th>
-					<th>Name</th>
-					<th>Vaccine (total)</th>
-					<th>Vaccine (target age)</th>
-					<th>Denominator</th>
-					<th></th>
-				</tr>
-				<tr ng-repeat="vac in rCtrl.adm.indicators()">
-					<td>{{vac.code}}</td>
-					<td>{{vac.displayName}}</td>
-					<td>{{rCtrl.adm.name(vac.vaccineAll)}}</td>
-					<td>{{rCtrl.adm.name(vac.vaccineTarget)}}</td>
-					<td>{{rCtrl.adm.name(vac.denominator)}}</td>
-					<td>
-						<button class="btn btn-small btn-info"
-								ng-click="rCtrl.adm.i = vac">
-							Edit
-						</button>
-						<button class="btn btn-small btn-danger"
-								ng-click="rCtrl.adm.indicatorDelete(vac.code)">
-							Delete
-						</button>
-					</td>
-				</tr>
-			</table>
-			<button class="btn btn-success" ng-click="rCtrl.adm.i = {code: null}" style="float: right">Add</button>
-		</uib-tab>
-		<uib-tab index="1" heading="Dropout rates">
-			<div ng-if="rCtrl.adm.d" style="margin: 10px">
-				<table class="table table-bordered" style="width: 600px;">
-					<tr>
-						<th>Code</th>
-						<td>{{rCtrl.adm.d.code}}</td>
-					</tr><tr>
-					<th>Name</th>
-					<td><input class="form-control" ng-model="rCtrl.adm.d.displayName"></td>
-				</tr><tr>
-					<th>Vaccine from</th>
-					<td>
-						<d2-select ng-model="rCtrl.adm.d.vaccineFrom" options="rCtrl.adm.indicators()"></d2-select>
-					</td>
-				</tr><tr>
-					<th>Vaccine to</th>
-					<td>
-						<d2-select ng-model="rCtrl.adm.d.vaccineTo" options="rCtrl.adm.indicators()"></d2-select>
-					</td>
-				</tr>
-
-				</table>
-				<button class="btn btn-danger" ng-click="rCtrl.adm.d = null">Cancel</button>
-				<button class="btn btn-success" ng-click="rCtrl.adm.dropoutSave(rCtrl.adm.d)">Save</button>
-			</div>
-
-			<table class="table table-bordered" ng-if="!rCtrl.adm.d" style="margin: 10px">
-				<tr>
-					<th>Code</th>
-					<th>Name</th>
-					<th>Vaccine from</th>
-					<th>Vaccine to</th>
-					<th></th>
-				</tr>
-				<tr ng-repeat="do in rCtrl.adm.dropouts()">
-					<td>{{do.code}}</td>
-					<td>{{do.displayName}}</td>
-					<td>{{rCtrl.adm.indicators(do.vaccineFrom).displayName}}</td>
-					<td>{{rCtrl.adm.indicators(do.vaccineTo).displayName}}</td>
-					<td>
-						<button class="btn btn-small btn-info"
-								ng-click="rCtrl.adm.d = do">
-							Edit
-						</button>
-						<button class="btn btn-small btn-danger"
-								ng-click="rCtrl.adm.dropoutDelete(do.code)">
-							Delete
-						</button>
-					</td>
-				</tr>
-			</table>
-			<button class="btn btn-success" ng-click="rCtrl.adm.d = {code: null}" style="float: right">Add</button>
-		</uib-tab>
-		<uib-tab index="2" heading="Performance">
-			<table class="table table-bordered"
-				   ng-if="!rCtrl.adm.d"
-				   style="margin: 10px; width: 600px;"
-				   ng-init="rCtrl.adm.p = rCtrl.adm.performance()[0]">
-				<tr>
-					<th>Name</th>
-					<td><input class="form-control" ng-model="rCtrl.adm.p.displayName"></td>
-				</tr>
-				<tr>
-					<th>Indicator (coverage)</th>
-					<td>
-						<d2-select options="rCtrl.adm.indicators()" ng-model="rCtrl.adm.p.indicator"></d2-select>
-					</td>
-				</tr>
-				<tr>
-					<th>Dropout rate</th>
-					<td>
-						<d2-select options="rCtrl.adm.dropouts()" ng-model="rCtrl.adm.p.dropout"></d2-select>
-					</td>
-				</tr>
-				<tr>
-					<th colspan="2">
-						<button class="button btn btn-success" ng-click="">Save</button>
-					</th>
-				</tr>
-			</table>
-		</uib-tab>
-		<uib-tab index="3" heading="RIM configuration" ng-click="rCtrl.rimConfig()">
-
-			<div style="width: 800px">
-			<h2>RIM export configuration</h2>
-
-			<p><em>Configuration</em> is used for changing general export parameters (existing parameters will be overwritten.
-				<em>Import</em> is used for	the initial import of RIM metadata only.</p>
-
-			<h3>Configuration</h3>
-			<label>Organisation unit levels</label>
-			<p>RIM export is done by district, and also include country codes. Please enter country code and select
-				province, district levels"</p>
-				<div style="width: 400px">
-				<span ">Country code: <input style="width: 100px; margin-bottom: 5px;" type="text" ng-model="rCtrl.rim.countryCode"></span>
-				<d2-select placeholder="Select province level..."
-						   options="rCtrl.rim.options.orgunitLevelsProvince" ng-model="rCtrl.rim.provinceLevel"
-				style="width: 400px"></d2-select>
-				<d2-select placeholder="Select district level..."
-						   options="rCtrl.rim.options.orgunitLevelsDistrict" ng-model="rCtrl.rim.districtLevel"
-						   style="width: 400px"></d2-select>
-				</div>
-
-			<br />
-
-			<label>Completeness</label>
-			<p>Select the EPI data set/reporting form to use for reporting on completeness</p>
-			<div style="width: 400px">
-				<d2-select placeholder="Select dataset..."
-						   options="rCtrl.rim.options.dataSets" ng-model="rCtrl.rim.dataset"
-						   style="width: 400px"></d2-select>
-
-			</div>
-			<button style="float: right; margin-top: 20px; margin-bottom: 20px;" class="btn btn-danger" ng-click="rCtrl.rimUpdate()"
-					ng-disabled="!rCtrl.rim.dataset || !rCtrl.rim.orgunitLevelsDistrict || !rCtrl.rim.orgunitLevelsProvince || !rCtrl.rim.countryCode">
-				Update configuration
-			</button>
-
-				<hr style="width: 100%; margin-top: 20px"/>
-
-			<h3>Import settings</h3>
-			<p>
-				RIM export relies on configuration of DHIS 2 indicators. This page is used for selecting the relevant
-				indicators and importing them into the DHIS 2. Administrators must then configure the indicator formulas
-				to map each indicator to the appropriate data elements.
-			</p>
-
-			<p>
-				A new user group will be imported with the current users as member, and the RIM indicators will be visible
-				only to user in that group. Additional users can be added to this group in the DHIS 2 user management app.
-			</p>
-
-			<br/>
-
-			<label>Stock</label>
-			<p>Is information on stock (doses available and doses used) available?
-				<input type="checkbox" ng-model="rCtrl.rim.stock"></p>
-
-			<br />
-
-			<label>AEFI</label>
-			<p>Is information on AEFIs <em>by vaccine</em> available?
-				<input type="checkbox" ng-model="rCtrl.rim.aefi"></p>
-
-			<br />
-			<label>Vaccine disaggregation</label>
-			<p>Is vaccination data disaggregated by static/outreach, or static/outreach/mobile?
-				<input type="checkbox" ng-model="rCtrl.rim.outreach"></p>
-
-			<br />
-			<label>Vaccines</label>
-			<table class="table table-bordered"
-				   ng-if="!rCtrl.adm.d"
-				   style="width: 600px;">
-				<tr ng-repeat="vaccine in rCtrl.rim.vaccineCodes">
-					<td>{{vaccine.name}}</td>
-					<td><input type="checkbox" ng-model="vaccine.selected" ng-init="vaccine.selected = false"></td>
-				</tr>
-			</table>
-
-			<p>Overwrite previously imported RIM indicators?
-				<input type="checkbox" ng-model="rCtrl.rim.overwrite"></p>
-
-			<button ng-disabled="!rCtrl.rim.dataset || !rCtrl.rim.orgunitLevelsDistrict || !rCtrl.rim.orgunitLevelsProvince || !rCtrl.rim.countryCode"
-					style="float: right; margin-top: 20px; margin-bottom: 20px;" class="btn btn-danger" ng-click="rCtrl.rimImport()">
-				Import RIM metadata and update configuration
-			</button>
-			</div>
-
-		</uib-tab>
-	</uib-tabset>
-
-</div>
-
+<div ng-include="'report/config.html'"></div>
 
 <div id="content" style="margin: 90px 10px 10px 10px;">
 
 	<h3>{{rCtrl.current.title}}</h3>
 	<h4>{{rCtrl.current.subtitle}}</h4>
 
-	<!--VACCINATIONS-->
-	<div ng-if="rCtrl.current.type === 'vac'" class="reportContent">
-		<table id="vaccineDataTable"
-			   class="table table-striped table-bordered dataTable no-footer table-condensed"
-			   style="margin-top: 20px;"
-			   st-table="rCtrl.current.dataTable"
-			   st-safe-src="rCtrl.current.data"
-			   ng-if="rCtrl.current.data">
-			<thead>
-			<tr>
-				<th ng-repeat="header in rCtrl.current.headerColumns"
-					id="{{header.id}}"
-					st-sort="{{header.id}}"
-					ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')"
-					rowspan="3">
-					{{header.title}}
-				</th>
-				<th>Data</th>
-				<th ng-repeat="header in rCtrl.current.dataColumns">
-					{{header.title}}
-				</th>
-			</tr>
-			</thead>
-			<tbody ng-repeat="row in rCtrl.current.dataTable track by $index">
-				<tr>
-					<!--Header-->
-					<td ng-repeat="header in rCtrl.current.headerColumns"
-						ng-if="(rCtrl.current.ouFilter && header.id != 'ou') || (!rCtrl.current.ouFilter && header.id != 'vaccine')"
-						rowspan="3">
-						{{row[header.id]}}
-					</td>
 
-					<!--Data-->
-					<td>All ages</td>
-					<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
-						{{row[header.id].vaccineAll | number : 0}}
-					</td>
-				</tr>
-				<tr>
-					<!--Data-->
-					<td>Target age group</td>
-					<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
-						{{row[header.id].vaccineTarget | number : 0}}
-					</td>
-				</tr>
-				<tr>
-					<!--Data-->
-					<td>Coverage</td>
-					<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
-						{{row[header.id].coverage}}%
-					</td>
-				</tr>
-			</tbody ng-repeat="row in rCtrl.current.dataTable track by $index">
-		</table>
-	</div>
+	<!--VACCINATIONS-->
+	<div ng-include="'report/reportVaccinations.html'"></div>
 
 
 	<!--PERFORMANCE-->
-	<div ng-if="rCtrl.current.type === 'perf'"  class="reportContent">
-
-		<div id="performanceChart" style="height: 600px; margin-bottom: 20px"></div>
-
-		<table id="perfromanceDataTable"
-			   class="table table-bordered dataTable no-footer table-condensed"
-			   style="margin-top: 20px;"
-			   st-table="rCtrl.current.dataTable"
-			   st-safe-src="rCtrl.current.data"
-			   ng-if="rCtrl.current.data">
-			<thead>
-			<tr>
-				<th ng-repeat="header in rCtrl.current.dataHeader"
-					id="{{header.id}}"
-					st-sort="{{header.id}}">
-					{{header.title}}
-				</th>
-				<th ng-repeat="header in rCtrl.current.dataHeaderData"
-					id="{{header.id}}">
-					{{header.title}}
-				</th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr></tr>
-			<tr ng-repeat="row in rCtrl.current.dataTable track by $index">
-				<td ng-repeat="header in rCtrl.current.dataHeader">
-					{{row[header.id]}}
-				</td>
-				<td ng-repeat="header in rCtrl.current.dataHeaderData"
-					ng-class="{success:row[header.id].category === 'A' && row[header.id].coverage <= 100,
-					info:row[header.id].category === 'B' && row[header.id].coverage <= 100,
-					warning:row[header.id].category === 'C' && row[header.id].dropout >= 0,
-					danger:row[header.id].category === 'D' && row[header.id].dropout >= 0}">
-					<table ng-if="row[header.id].category">
-						<tr>
-							<th rowspan=2 style="padding-right: 5px">
-								{{row[header.id].category}}</th>
-							<td ng-class="{redText:row[header.id].coverage > 100}">{{row[header.id].coverage}}%</td>
-						</tr>
-						<tr>
-							<td ng-class="{redText:row[header.id].dropout < 0}">{{row[header.id].dropout}}%</td>
-						</tr>
-					</table>
-
-				</td>
-			</tr>
-			</tbody>
-		</table>
-
-		<table id="performanceLegendTable" class="table table-bordered no-footer table-condensed">
-			<tr>
-				<td class="success">
-					<table>
-						<tr>
-							<th rowspan=2 style="padding-right: 10px">
-								Category A</th>
-							<td>Coverage >= 90%</td>
-						</tr>
-						<tr>
-							<td>Dropout rate <= 10%</td>
-						</tr>
-					</table>
-				</td>
-				<td class="info">
-					<table>
-						<tr>
-							<th rowspan=2 style="padding-right: 10px">
-								Category B</th>
-							<td>Coverage >= 90%</td>
-						</tr>
-						<tr>
-							<td>Dropout rate > 10%</td>
-						</tr>
-					</table>
-				</td>
-				<td class="warning">
-					<table>
-						<tr>
-							<th rowspan=2 style="padding-right: 10px">
-								Category C</th>
-							<td>Coverage < 90%</td>
-						</tr>
-						<tr>
-							<td>Dropout rate < 10%</td>
-						</tr>
-					</table>
-				</td>
-				<td class="danger">
-					<table>
-						<tr>
-							<th rowspan=2 style="padding-right: 10px">
-								Category D</th>
-							<td>Coverage < 90%</td>
-						</tr>
-						<tr>
-							<td>Dropout rate >= 10%</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-		</table>
-
-	</div>
+	<div ng-include="'report/reportPerformance.html'"></div>
 
 
 	<!--MONITORING-->
-	<div ng-if="rCtrl.current.type === 'mon'" class="reportContent">
-		<div id="monitoringChart" style="height: 600px; margin-bottom: 20px"></div>
-	</div>
+	<div ng-include="'report/reportMonitoring.html'"></div>
+
 
 	<!-- RIM -->
-	<div ng-if="rCtrl.current.type === 'rim' && !rCtrl.rim.done">
-		<h3>{{rCtrl.rim.activity}}</h3>
-		<div class="progress">
-		<div class="progress-bar progress-bar-striped active" role="progressbar"
-			 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-		</div>
-		</div>
-	</div>
+	<div ng-include="'report/reportRIM.html'"></div>
+
 </div>
