--- a/src/report/reportPerformance.html
+++ b/src/report/reportPerformance.html
@@ -32,11 +32,11 @@
 				{{row[header.id]}}
 			</td>
 			<td ng-repeat="header in rCtrl.current.dataHeaderData track by $index"
-				ng-class="{success:row[header.id].category === 'A' && row[header.id].coverage <= 100 && $index < rCtrl.currentReportingMonth(),
-					info:row[header.id].category === 'B' && row[header.id].coverage <= 100 && $index < rCtrl.currentReportingMonth(),
-					warning:row[header.id].category === 'C' && row[header.id].dropout >= 0 && $index < rCtrl.currentReportingMonth(),
-					danger:row[header.id].category === 'D' && row[header.id].dropout >= 0 && $index < rCtrl.currentReportingMonth()}">
-				<table ng-if="row[header.id].category && $index < rCtrl.currentReportingMonth()">
+				ng-class="{success:row[header.id].category === 'A' && row[header.id].coverage <= 100 && rCtrl.isPreviousMonth($index),
+					info:row[header.id].category === 'B' && row[header.id].coverage <= 100 && rCtrl.isPreviousMonth($index),
+					warning:row[header.id].category === 'C' && row[header.id].dropout >= 0 && rCtrl.isPreviousMonth($index),
+					danger:row[header.id].category === 'D' && row[header.id].dropout >= 0 && rCtrl.isPreviousMonth($index)}">
+				<table ng-if="row[header.id].category && rCtrl.isPreviousMonth($index)">
 					<tr>
 						<th rowspan=2 style="padding-right: 5px">
 							{{row[header.id].category}}</th>
