WIP - rewriting to use webpack and add i18next. dhis2 header bar removed for now

--- a/src/appCommons/d2SelectIndicator.html
+++ b/src/appCommons/d2SelectIndicator.html
@@ -1,8 +1,10 @@
+
+
 <div>
 	<d2-select
 			ng-model="d2sCtrl.group"
 			options="d2sCtrl.groups"
-			placeholder="Indicator group..."
+			placeholder="{{ 'Indicator group' | i18next }}..."
 			on-select="d2sCtrl.getElements();">
 	</d2-select>
 </div>
