--- a/src/appCommons/d2SelectDataElement.html
+++ b/src/appCommons/d2SelectDataElement.html
@@ -1,3 +1,5 @@
+
+
 <div id="frame">
 	<div style="display: inline-block;" ng-style="{width: d2sCtrl.frameWidth() - 136}">
 		<d2-select
@@ -8,8 +10,8 @@
 		</d2-select>
 	</div>
 	<div class="btn-group btn-group-justified" ng-click='d2sCtrl.getElements();' style="width: 120px; display: inline-block; vertical-align: top;">
-		<label class="btn btn-default" ng-model="d2sCtrl.disaggregation" uib-btn-radio="0">Totals</label>
-		<label class="btn btn-default" ng-model="d2sCtrl.disaggregation" uib-btn-radio="1">Details</label>
+		<label class="btn btn-default" ng-model="d2sCtrl.disaggregation" uib-btn-radio="0">{{ 'Totals' | i18next }}</label>
+		<label class="btn btn-default" ng-model="d2sCtrl.disaggregation" uib-btn-radio="1">{{ 'Details' | i18next }}</label>
 	</div>
 
 	<d2-select
