--- a/src/appCommons/d2SelectOrgunit.html
+++ b/src/appCommons/d2SelectOrgunit.html
@@ -1,4 +1,6 @@
-<label>Boundary</label><br />
+
+
+<label>{{ 'Boundary' | i18next }}</label><br />
 <div class="btn-group" ng-click="d2sCtrl.orgunitSelect();">
 	<label
 			ng-repeat="orgunit in d2sCtrl.userOrgunits track by $index"
@@ -11,7 +13,7 @@
 			class="btn btn-default"
 			ng-model="d2sCtrl.selectionType"
 			uib-btn-radio="d2sCtrl.userOrgunits.length">
-		Other
+		{{ 'Other' | i18next }}
 	</label>
 </div>
 
@@ -24,7 +26,7 @@
 </div>
 
 <!-- DISAGGREGATION -->
-<label style="margin-top: 10px;" for="orgunitSelect" ng-if="!(d2sCtrl.hideLevel && d2sCtrl.hideGroup)">Disaggregation</label>
+<label style="margin-top: 10px;" for="orgunitSelect" ng-if="!(d2sCtrl.hideLevel && d2sCtrl.hideGroup)">{{ 'Disaggregation' | i18next }}</label>
 <div>
 
 	<d2-select
@@ -32,7 +34,7 @@
 			ng-disabled="d2sCtrl.selectedGroup"
 			ng-model="d2sCtrl.selectedLevel"
 			options="d2sCtrl.filteredLevels"
-			placeholder="Organisation unit level"
+			placeholder="{{ 'Organisation unit level' | i18next }}"
 			on-select="d2sCtrl.selectLevel(object)">
 	</d2-select>
 
@@ -41,14 +43,14 @@
 			ng-disabled="d2sCtrl.selectedLevel"
 			ng-model="d2sCtrl.selectedGroup"
 			options="d2sCtrl.orgunitGroups"
-			placeholder="Organisation unit group"
+			placeholder="{{ 'Organisation unit group' | i18next }}"
 			on-select="d2sCtrl.selectGroup(object)">
 	</d2-select>
 </div>
 
 
 <!-- CURRENT SELECTION -->
-<label style="margin-top: 10px" for="orgunitSelected">Selected </label>
+<label style="margin-top: 10px" for="orgunitSelected">{{ 'Selected' | i18next }} </label>
 <div id="orgunitSelected">
 	<p>
 		<span style="font-size: 100%;" class="label label-primary">{{d2sCtrl.selectedOrgunit.displayName}}</span>
